# html2docx

./: pyproject.toml  requirements.txt
htmldocx/: h2d.py
tests/: text1.html
